Impl docker and some small swagger refactoring
